# CVRI_NRV_AngioReportExtractor

./: .env  .gitignore  README.md  ToDo.md  main.py  pyproject.toml
Output/: complete.csv
SampleData/: 000-TBC-001_NoPostDil.2nd.xml  000-TBC-001_NoPostDil.imp.xml  000-TBC-011_AfterPostDil.2nd.xml  000-TBC-011_AfterPostDil.imp.xml  000-TBC-011_BeforePostDil.2nd.xml  000-TBC-011_BeforePostDil.imp.xml  TBC Excel sheet with fields.xlsx
assets/: fields.txt
modules/: filter.py  gui.py  meta.py  parser.py  writer.py
